[workspace]
resolver="2" 

members = ["indra_beaglebone",
"chademo_v2"]

[profile.dev]
debug = 2
debug-assertions = true 
incremental = false
opt-level = 1         
overflow-checks = true  

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "thin"
# codegen-units = 4
[patch.crates-io]
chademo_v2 = {path = "chademo_v2"}
